feat: update docker compose and webhooks service
