# packages/proto-gen/go/webhooks/inboundwebhooksapi/v1/api.pb.gw.go
@@ -35,27 +35,27 @@ var (
 	_ = metadata.Join
 )
 
-func request_InboundWebhooksAPI_UserCreated_0(ctx context.Context, marshaler runtime.Marshaler, client InboundWebhooksAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func request_InboundWebhooksAPI_UserRegistered_0(ctx context.Context, marshaler runtime.Marshaler, client InboundWebhooksAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var (
-		protoReq UserCreatedRequest
+		protoReq UserRegisteredRequest
 		metadata runtime.ServerMetadata
 	)
 	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
-	msg, err := client.UserCreated(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.UserRegistered(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 }
 
-func local_request_InboundWebhooksAPI_UserCreated_0(ctx context.Context, marshaler runtime.Marshaler, server InboundWebhooksAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func local_request_InboundWebhooksAPI_UserRegistered_0(ctx context.Context, marshaler runtime.Marshaler, server InboundWebhooksAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var (
-		protoReq UserCreatedRequest
+		protoReq UserRegisteredRequest
 		metadata runtime.ServerMetadata
 	)
 	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
-	msg, err := server.UserCreated(ctx, &protoReq)
+	msg, err := server.UserRegistered(ctx, &protoReq)
 	return msg, metadata, err
 }
 
@@ -65,25 +65,25 @@ func local_request_InboundWebhooksAPI_UserCreated_0(ctx context.Context, marshal
 // Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterInboundWebhooksAPIHandlerFromEndpoint instead.
 // GRPC interceptors will not work for this type of registration. To use interceptors, you must use the "runtime.WithMiddlewares" option in the "runtime.NewServeMux" call.
 func RegisterInboundWebhooksAPIHandlerServer(ctx context.Context, mux *runtime.ServeMux, server InboundWebhooksAPIServer) error {
-	mux.Handle(http.MethodPost, pattern_InboundWebhooksAPI_UserCreated_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle(http.MethodPost, pattern_InboundWebhooksAPI_UserRegistered_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/webhooks.inboundwebhooksapi.v1.InboundWebhooksAPI/UserCreated", runtime.WithHTTPPathPattern("/v1/webhooks/inbound/user"))
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/webhooks.inboundwebhooksapi.v1.InboundWebhooksAPI/UserRegistered", runtime.WithHTTPPathPattern("/v1/webhooks/inbound/auth/user/registered"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_InboundWebhooksAPI_UserCreated_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_InboundWebhooksAPI_UserRegistered_0(annotatedContext, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
 		if err != nil {
 			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		forward_InboundWebhooksAPI_UserCreated_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_InboundWebhooksAPI_UserRegistered_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -125,30 +125,30 @@ func RegisterInboundWebhooksAPIHandler(ctx context.Context, mux *runtime.ServeMu
 // doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
 // "InboundWebhooksAPIClient" to call the correct interceptors. This client ignores the HTTP middlewares.
 func RegisterInboundWebhooksAPIHandlerClient(ctx context.Context, mux *runtime.ServeMux, client InboundWebhooksAPIClient) error {
-	mux.Handle(http.MethodPost, pattern_InboundWebhooksAPI_UserCreated_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle(http.MethodPost, pattern_InboundWebhooksAPI_UserRegistered_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/webhooks.inboundwebhooksapi.v1.InboundWebhooksAPI/UserCreated", runtime.WithHTTPPathPattern("/v1/webhooks/inbound/user"))
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/webhooks.inboundwebhooksapi.v1.InboundWebhooksAPI/UserRegistered", runtime.WithHTTPPathPattern("/v1/webhooks/inbound/auth/user/registered"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_InboundWebhooksAPI_UserCreated_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_InboundWebhooksAPI_UserRegistered_0(annotatedContext, inboundMarshaler, client, req, pathParams)
 		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
 		if err != nil {
 			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		forward_InboundWebhooksAPI_UserCreated_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_InboundWebhooksAPI_UserRegistered_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 	return nil
 }
 
 var (
-	pattern_InboundWebhooksAPI_UserCreated_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "webhooks", "inbound", "user"}, ""))
+	pattern_InboundWebhooksAPI_UserRegistered_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3, 2, 4, 2, 5}, []string{"v1", "webhooks", "inbound", "auth", "user", "registered"}, ""))
 )
 
 var (
-	forward_InboundWebhooksAPI_UserCreated_0 = runtime.ForwardResponseMessage
+	forward_InboundWebhooksAPI_UserRegistered_0 = runtime.ForwardResponseMessage
 )
